# bluetooth

./: README.md
dev/dbus/cpp/blueman/: CMakeLists.txt
dev/dbus/cpp/blueman/include/: bluebus.h
dev/dbus/cpp/blueman/src/: bluebus.cpp  main.cpp
dev/dbus/python/basic/: calculator.py  com.example.calculator.conf  counter_signal.py  hostname.py  signal_test.py
dev/dbus/python/blue_py/: blue_adv.py  blue_scan.py  blueman.py
dev/hci/blue_adv/: CMakeLists.txt
dev/hci/blue_adv/include/: hci_helper.h
dev/hci/blue_adv/include/bluez/: att.h  gatt-client.h  hci.h  mainloop.h
dev/hci/blue_adv/src/: hci_helper.cpp  main.cpp
dev/hci/blue_adv/src/bluez/: att.c  crypto.c  gatt-client.c  timeout-mainloop.c  uuid.c
dev/hci/blue_client/: CMakeLists.txt
dev/hci/blue_client/include/: ble_cli.h
dev/hci/blue_client/include/bluez/: gatt-db.h  gatt-helpers.h  gatt-server.h  io.h  timeout.h  util.h
dev/hci/blue_client/src/: ble_cli.cpp  main.cpp
dev/hci/blue_client/src/bluez/: bluetooth.c  gatt-server.c  hci.c  io-mainloop.c  mainloop.c  util.c
dev/hci/blue_server/: CMakeLists.txt  fifo.sh
dev/hci/blue_server/include/: ble_server.h  device_info.h  fifo_com.h  hci_helper.h  json_packer.h
dev/hci/blue_server/include/bluez/: att-types.h  crypto.h  hci_lib.h  l2cap.h  queue.h  uuid.h
dev/hci/blue_server/src/: ble_server.cpp  device_info.cpp  fifo_com.cpp  hci_helper.cpp  main.cpp
dev/hci/blue_server/src/bluez/: gatt-db.c  gatt-helpers.c  queue.c
